Bug 89755 - Graphical corruption when using vdpau/vaapi
Summary: Graphical corruption when using vdpau/vaapi
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-25 04:01 UTC by Nick Sarnie
Modified: 2015-03-30 02:17 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Nick Sarnie 2015-03-25 04:01:26 UTC
Hi guys. I have a very strange issue, if I try to play videos using vdpau or vaapi, I get graphical corruption. This only happens after I try to make if fullscreen once. After that, fullscreen and windowed are corrupted. If i were to never make it fullscreen, the video would work fine. There is no issue if I remove Option "DRI3"(eg. use DRI2), if I use modesetting DRI3, or if I disable vdpau/vaapi.

Here is a video of the corruption: https://www.youtube.com/watch?v=o8va0gNMrnU


Here is some relevant info from MrCooper: "I guess it's some bad interaction between DRI3 and DRI2 page flipping"

I am using gentoo with xf86-video-ati git, xserver git, kernel 3.19, and the Cinnamon DE with Muffin WM.

I can test any patches or provide more info upon request,

Thanks alot,
sarnex
Comment 1 Michel Dänzer 2015-03-30 02:17:46 UTC
commit f8b0f23e9f4af9f9097ee5e72d53b45173163c41
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Fri Mar 27 12:34:55 2015 +0900

    DRI2: Use radeon_get_pixmap_handle
    
    Now we can share pixmaps with no struct radeon_bo via DRI2.
    
    Fixes VDPAU video playback freezing when using an OpenGL compositor with
    DRI3 enabled.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.