DRI2: Use radeon_get_pixmap_handle

Now we can share pixmaps with no struct radeon_bo via DRI2.

Fixes VDPAU video playback freezing when using an OpenGL compositor with
DRI3 enabled.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=89755

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>
Tested-by: Nick Sarnie <commendsarnex@gmail.com>